# ResultViewer

./: .buildinfo  .flake8  .gitignore  LICENSE  README.md  contribute.html  genindex.html  index.html  installation.html  make_venv.bat  objects.inv  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  search.html  searchindex.js  setup.py  usage.html
.doctrees/: contribute.doctree  environment.pickle  index.doctree  installation.doctree  usage.doctree
.github/workflows/: documentation.yaml  nightly.yaml  test.yaml
_sources/: contribute.rst.txt  index.rst.txt  installation.rst.txt
doc/: conf.py  contribute.rst  index.rst  installation.rst  usage.rst
src/: Executable.pyw  ResultViewer.py  ResultsParser.py  __init__.py  main.py  run.bat  ui.py
src/.data/: AC_48_xxx_ECU_XX_XX_XX_TestSummaryReport.xltx  SplashScreenLogo.vsdx  new report.xlsx  setting.ini
src/.data/Manual/: Manual.tex
src/.data/Manual/chapters/: Filtering.tex  GenerateReport.tex  ReadFile.tex  SaveFile.tex  ViewFile.tex
src/Plugins/: ReportHTML.py  create_html.py
src/result_viewer/: ResultViewer.py  main.py  ui.py
src/result_viewer/Plugins/: ReportHTML.py  create_html.py
test/: test_result_parser.py
test/results_data/: 2020-04-06-19-03-00-LMBPC0588.txt  2020-04-06-19-04-08-LMBPC0588.txt
test/results_data/sub_folder/: 2020-04-06-19-03-00-LMBPC0588.txt  2020-04-06-19-04-08-LMBPC0588.txt
workflows/: documentation.yaml
