[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "result_viewer"
version = "0.0.1"
license = "MIT"
authors = [
    "Cere <cere@cere.com>",
]
repository = "https://github.com/Lexcere/ResultViewer"
description = "View results output files"
readme = "README.md"
requires-python = ">=3.6.0"
package-dir = {"result_viewer"= "src"}

[tool.setuptools]
packages = ["result_viewer", "result_viewer.Plugins"]

[tool.setuptools.dynamic]
dependencies = "file.requirements.txt"

[project.scripts]
results = "result_viewer.main:main"